internal/xds/translator/testdata/out/extension-xds-ir/http-route.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  responseHeadersToAdd:
  - append: false
    header:
      key: x-request-id
      value: '%REQ(X-REQUEST-ID)%'
  virtualHosts:
  - domains:
    - '*'
    name: first-listener
    routes:
    - match:
        headers:
        - name: user
          stringMatch:
            exact: jason
        - name: test
          stringMatch:
            suffix: end
        prefix: /
        queryParameters:
        - name: debug
          stringMatch:
            exact: "yes"
      name: first-route
      route:
        cluster: first-route
